ゲーム攻略サイトのモダン化

--- a/beginner.html
+++ b/beginner.html
@@ -10,6 +10,7 @@
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -82,9 +83,12 @@
                 <div class="main-content">
                     <!-- Getting Started -->
                     <section class="section getting-started">
-                        <h2 class="section-title">🚀 プロスピAを始めよう</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="rocket" class="section-title-icon"></i>
+                            プロスピAを始めよう
+                        </h2>
                         <div class="alert">
-                            <div class="alert-icon">💡</div>
+                            <i data-lucide="lightbulb" class="alert-icon"></i>
                             <div class="alert-content">
                                 <strong>初心者の方へ</strong>
                                 <p>プロスピAは奥が深いゲームですが、基本を押さえれば誰でも楽しめます。このガイドで効率的にスタートしましょう！</p>
@@ -93,7 +97,10 @@
 
                         <div class="gacha-info-grid">
                             <div class="info-card">
-                                <h4>🎮 基本操作</h4>
+                                <h4>
+                                    <i data-lucide="gamepad-2" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    基本操作
+                                </h4>
                                 <ul class="probability-list">
                                     <li>
                                         <span>Vロード</span>
@@ -111,7 +118,10 @@
                             </div>
 
                             <div class="info-card">
-                                <h4>💎 エナジーの使い方</h4>
+                                <h4>
+                                    <i data-lucide="gem" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    エナジーの使い方
+                                </h4>
                                 <ul class="energy-list">
                                     <li>
                                         <span>ガチャより報酬優先</span>
@@ -129,7 +139,10 @@
                             </div>
 
                             <div class="info-card">
-                                <h4>⭐ 選手育成のコツ</h4>
+                                <h4>
+                                    <i data-lucide="star" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    選手育成のコツ
+                                </h4>
                                 <ul class="bonus-list">
                                     <li>
                                         <span>特訓</span>
@@ -150,7 +163,10 @@
 
                     <!-- Step by Step Guide -->
                     <section class="section step-guide">
-                        <h2 class="section-title">📋 序盤の進め方（ステップ別）</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="clipboard-list" class="section-title-icon"></i>
+                            序盤の進め方（ステップ別）
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -200,28 +216,31 @@
 
                     <!-- Beginner Tips -->
                     <section class="section beginner-tips">
-                        <h2 class="section-title">💡 初心者が知っておくべきコツ</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="lightbulb" class="section-title-icon"></i>
+                            初心者が知っておくべきコツ
+                        </h2>
                         <div class="tips-grid">
                             <div class="tip-card">
-                                <div class="tip-icon">⚡</div>
+                                <i data-lucide="zap" class="tip-icon"></i>
                                 <h4>エナジーの節約術</h4>
                                 <p>序盤はガチャよりもイベント報酬を優先しましょう。ログインボーナスや無料ガチャでコツコツ貯めることが重要です。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🎯</div>
+                                <i data-lucide="target" class="tip-icon"></i>
                                 <h4>効率的な育成方法</h4>
                                 <p>Vロードでは特訓素材を集めながら選手を育成。オートプレイを活用して時間を節約しつつ、確実に成長させましょう。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🏆</div>
+                                <i data-lucide="trophy" class="tip-icon"></i>
                                 <h4>チーム編成の基本</h4>
                                 <p>ポジション適性を重視し、バランスの良いチームを作りましょう。攻撃力だけでなく守備力も考慮することが大切です。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">📈</div>
+                                <i data-lucide="trending-up" class="tip-icon"></i>
                                 <h4>長期的な目標設定</h4>
                                 <p>短期的な成果にとらわれず、長期的な視点でチーム強化を進めましょう。計画的な育成が成功の鍵です。</p>
                             </div>
@@ -230,7 +249,10 @@
 
                     <!-- Common Mistakes -->
                     <section class="section common-mistakes">
-                        <h2 class="section-title">⚠️ 初心者がやりがちな失敗</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="alert-triangle" class="section-title-icon"></i>
+                            初心者がやりがちな失敗
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-content">
@@ -260,7 +282,10 @@
 
                     <!-- Related Articles -->
                     <section class="section related-articles">
-                        <h2 class="section-title">📚 関連記事</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="book-open" class="section-title-icon"></i>
+                            関連記事
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -291,7 +316,10 @@
                 <aside class="sidebar">
                     <!-- Quick Info -->
                     <div class="widget quick-info-widget">
-                        <h3 class="widget-title">⚡ 初心者チェックリスト</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="check-square" class="widget-title-icon"></i>
+                            初心者チェックリスト
+                        </h3>
                         <div class="quick-info">
                             <div class="info-item">
                                 <span class="info-label">チュートリアル</span>
@@ -310,7 +338,10 @@
 
                     <!-- Beginner Resources -->
                     <div class="widget gacha-history-widget">
-                        <h3 class="widget-title">📖 初心者向けリソース</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="book" class="widget-title-icon"></i>
+                            初心者向けリソース
+                        </h3>
                         <ul class="gacha-history-list">
                             <li><a href="reroll.html">リセマラガイド</a></li>
                             <li><a href="#">基本操作マニュアル</a></li>
@@ -321,7 +352,10 @@
 
                     <!-- Progress Calculator -->
                     <div class="widget calculator-widget">
-                        <h3 class="widget-title">📊 進捗チェッカー</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="bar-chart-3" class="widget-title-icon"></i>
+                            進捗チェッカー
+                        </h3>
                         <div class="calculator">
                             <div class="calc-input">
                                 <label>現在のランク:</label>
@@ -400,6 +434,14 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+    <script>
+        // Initialize Lucide icons
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
+        });
+    </script>
     <script>
         // Progress Calculator
         document.addEventListener('DOMContentLoaded', function() {
