--- a/events.html
+++ b/events.html
@@ -12,6 +12,7 @@
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
     <!-- Header -->
@@ -85,7 +86,10 @@
                     <!-- Current Events -->
                     <section class="section current-events">
                         <div class="section-header">
-                            <h2 class="section-title">🎯 開催中のイベント</h2>
+                            <h2 class="section-title">
+                                <i data-lucide="target" class="section-title-icon"></i>
+                                開催中のイベント
+                            </h2>
                             <span class="gacha-period">2025年7月7日(月)15:00～7月13日(日)14:59</span>
                         </div>
                         
@@ -100,7 +104,10 @@
                         <div class="gacha-details">
                             <div class="gacha-info-grid">
                                 <div class="info-card">
-                                    <h4>🎁 主要報酬</h4>
+                                    <h4>
+                                        <i data-lucide="gift" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        主要報酬
+                                    </h4>
                                     <ul class="probability-list">
                                         <li>
                                             <span>Sランク契約書（100%）</span>
@@ -118,7 +125,10 @@
                                 </div>
 
                                 <div class="info-card">
-                                    <h4>⚡ 効率的な進め方</h4>
+                                    <h4>
+                                        <i data-lucide="zap" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        効率的な進め方
+                                    </h4>
                                     <ul class="energy-list">
                                         <li>
                                             <span>毎日必ず6試合をこなす</span>
@@ -136,7 +146,10 @@
                                 </div>
 
                                 <div class="info-card">
-                                    <h4>📊 攻略のコツ</h4>
+                                    <h4>
+                                        <i data-lucide="bar-chart-3" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        攻略のコツ
+                                    </h4>
                                     <ul class="bonus-list">
                                         <li>
                                             <span>毎日６試合！</span>
@@ -158,7 +171,10 @@
 
                     <!-- Event Guides -->
                     <section class="section event-guides">
-                        <h2 class="section-title">📚 イベント別攻略ガイド</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="book-open" class="section-title-icon"></i>
+                            イベント別攻略ガイド
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -199,28 +215,31 @@
 
                     <!-- Event Tips -->
                     <section class="section event-tips">
-                        <h2 class="section-title">💡 イベント攻略の基本テクニック</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="lightbulb" class="section-title-icon"></i>
+                            イベント攻略の基本テクニック
+                        </h2>
                         <div class="tips-grid">
                             <div class="tip-card">
-                                <div class="tip-icon">⏰</div>
+                                <i data-lucide="clock" class="tip-icon"></i>
                                 <h4>スタミナ管理</h4>
                                 <p>イベント期間中はスタミナの無駄遣いを避けましょう。ボーナスタイムを狙って効率よく消費することが重要です。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🎯</div>
+                                <i data-lucide="target" class="tip-icon"></i>
                                 <h4>目標設定</h4>
                                 <p>ランキング狙いか累計報酬狙いかを明確にしましょう。目標に応じて戦略を変えることで効率が大幅に向上します。（プロスピコロシアムは例外）</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">📊</div>
+                                <i data-lucide="bar-chart-3" class="tip-icon"></i>
                                 <h4>データ分析</h4>
                                 <p>過去のイベントデータを参考に、必要なポイント数や時間配分を計算しましょう。計画的な進行が成功の鍵です。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🛡️</div>
+                                <i data-lucide="shield" class="tip-icon"></i>
                                 <h4>アイテム活用</h4>
                                 <p>お守りやブースターアイテムを適切に使用することで、効率を大幅に向上させることができます。（プロスピコロシアムは例外）</p>
                             </div>
@@ -229,7 +248,10 @@
 
                     <!-- Related Articles -->
                     <section class="section related-articles">
-                        <h2 class="section-title">📚 関連記事</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="book-open" class="section-title-icon"></i>
+                            関連記事
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -260,7 +282,10 @@
                 <aside class="sidebar">
                     <!-- Quick Info -->
                     <div class="widget quick-info-widget">
-                        <h3 class="widget-title">⚡ クイック情報</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="zap" class="widget-title-icon"></i>
+                            クイック情報
+                        </h3>
                         <div class="quick-info">
                             <div class="info-item">
                                 <span class="info-label">開催中イベント</span>
@@ -279,7 +304,10 @@
 
                     <!-- Event Schedule -->
                     <div class="widget gacha-history-widget">
-                        <h3 class="widget-title">📅 イベントスケジュール</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="calendar" class="widget-title-icon"></i>
+                            イベントスケジュール
+                        </h3>
                         <ul class="gacha-history-list">
                             <li><a href="#">StarRoad</a> <span class="date">6/14-6/21</span></li>
                             <li><a href="#">必勝アリーナ</a> <span class="date">---</span></li>
@@ -290,7 +318,10 @@
 
                     <!-- Point Calculator -->
                     <div class="widget calculator-widget">
-                        <h3 class="widget-title">🧮 ポイント計算機</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="calculator" class="widget-title-icon"></i>
+                            ポイント計算機
+                        </h3>
                         <div class="calculator">
                             <div class="calc-input">
                                 <label>目標ポイント:</label>
@@ -309,7 +340,10 @@
 
                     <!-- Ad Space -->
                     <div class="widget ad-widget">
-                        <h3 class="widget-title">📢 広告</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="megaphone" class="widget-title-icon"></i>
+                            広告
+                        </h3>
                         <!-- admax -->
                         <script src="https://adm.shinobi.jp/s/9f7c5790f90bc5c18ae58819a422f5af"></script>
                         <!-- admax -->
@@ -369,6 +403,14 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+    <script>
+        // Initialize Lucide icons
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
+        });
+    </script>
     <script>
         // Point Calculator
         document.addEventListener('DOMContentLoaded', function() {
