--- a/guides.html
+++ b/guides.html
@@ -25,6 +25,7 @@
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -113,10 +114,16 @@
                 <div class="main-content">
                     <!-- Strategy Overview -->
                     <section class="section strategy-overview">
-                        <h2 class="section-title">🎯 攻略の基本戦略</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="target" class="section-title-icon"></i>
+                            攻略の基本戦略
+                        </h2>
                         <div class="gacha-info-grid">
                             <div class="info-card">
-                                <h4>🏆 チーム強化の優先順位</h4>
+                                <h4>
+                                    <i data-lucide="trophy" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    チーム強化の優先順位
+                                </h4>
                                 <ul class="probability-list">
                                     <li>
                                         <span>1. 主力選手の育成</span>
@@ -134,7 +141,10 @@
                             </div>
 
                             <div class="info-card">
-                                <h4>💎 リソース管理</h4>
+                                <h4>
+                                    <i data-lucide="gem" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    リソース管理
+                                </h4>
                                 <ul class="energy-list">
                                     <li>
                                         <span>エナジー</span>
@@ -152,7 +162,10 @@
                             </div>
 
                             <div class="info-card">
-                                <h4>📈 長期的な目標</h4>
+                                <h4>
+                                    <i data-lucide="trending-up" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                    長期的な目標
+                                </h4>
                                 <ul class="bonus-list">
                                     <li>
                                         <span>ランク上げ</span>
@@ -173,7 +186,10 @@
 
                     <!-- Advanced Techniques -->
                     <section class="section advanced-techniques">
-                        <h2 class="section-title">🔥 上級テクニック</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="flame" class="section-title-icon"></i>
+                            上級テクニック
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -212,28 +228,31 @@
 
                     <!-- Game Modes Guide -->
                     <section class="section game-modes">
-                        <h2 class="section-title">🎮 ゲームモード別攻略</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="gamepad-2" class="section-title-icon"></i>
+                            ゲームモード別攻略
+                        </h2>
                         <div class="tips-grid">
                             <div class="tip-card">
-                                <div class="tip-icon">⚾</div>
+                                <i data-lucide="circle" class="tip-icon"></i>
                                 <h4>Vロード攻略</h4>
                                 <p>選手育成の基本となるVロード。効率的な進め方とスタミナ管理のコツを解説します。オートプレイの活用法も紹介。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🏟️</div>
+                                <i data-lucide="building" class="tip-icon"></i>
                                 <h4>スタジアム攻略</h4>
                                 <p>他プレイヤーとの対戦モード。チーム編成の重要性と、相手に応じた戦術変更のポイントを解説します。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🎯</div>
+                                <i data-lucide="target" class="tip-icon"></i>
                                 <h4>イベント攻略</h4>
                                 <p>期間限定イベントの効率的な進め方。報酬の優先順位と、時間配分の最適化について詳しく説明します。</p>
                             </div>
 
                             <div class="tip-card">
-                                <div class="tip-icon">🏆</div>
+                                <i data-lucide="trophy" class="tip-icon"></i>
                                 <h4>ランキング戦略</h4>
                                 <p>ランキングイベントで上位を狙うための戦略。競合分析と差別化のポイントを解説します。</p>
                             </div>
@@ -242,7 +261,10 @@
 
                     <!-- Data Analysis -->
                     <section class="section data-analysis">
-                        <h2 class="section-title">📊 データ分析と統計</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="bar-chart-3" class="section-title-icon"></i>
+                            データ分析と統計
+                        </h2>
                         <div class="gacha-banner">
                             <img src="/placeholder.svg?height=200&width=800" alt="データ分析">
                             <div class="gacha-info-overlay">
@@ -254,21 +276,30 @@
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-content">
-                                    <h3>📈 能力値分析</h3>
+                                    <h3>
+                                        <i data-lucide="trending-up" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        能力値分析
+                                    </h3>
                                     <p>選手の能力値データを分析し、最適な育成方針を決定する方法。統計的な観点から効率的な強化ポイントを見つけます。</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-content">
-                                    <h3>🎲 確率計算</h3>
+                                    <h3>
+                                        <i data-lucide="dice-6" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        確率計算
+                                    </h3>
                                     <p>ガチャの確率やイベント報酬の期待値を計算し、投資対効果を最大化する方法を解説します。</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-content">
-                                    <h3>📋 進捗管理</h3>
+                                    <h3>
+                                        <i data-lucide="clipboard-list" style="width: 16px; height: 16px; display: inline; margin-right: 0.5rem; color: #007bff;"></i>
+                                        進捗管理
+                                    </h3>
                                     <p>目標達成までの進捗を数値化し、効率的なプレイ計画を立てる方法。データドリブンなアプローチを紹介します。</p>
                                 </div>
                             </article>
@@ -277,7 +308,10 @@
 
                     <!-- Related Articles -->
                     <section class="section related-articles">
-                        <h2 class="section-title">📚 関連記事</h2>
+                        <h2 class="section-title">
+                            <i data-lucide="book-open" class="section-title-icon"></i>
+                            関連記事
+                        </h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
@@ -308,7 +342,10 @@
                 <aside class="sidebar">
                     <!-- Quick Info -->
                     <div class="widget quick-info-widget">
-                        <h3 class="widget-title">⚡ 攻略レベル</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="zap" class="widget-title-icon"></i>
+                            攻略レベル
+                        </h3>
                         <div class="quick-info">
                             <div class="info-item">
                                 <span class="info-label">初心者向け</span>
@@ -327,7 +364,10 @@
 
                     <!-- Guide Categories -->
                     <div class="widget categories-widget">
-                        <h3 class="widget-title">📂 攻略カテゴリー</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="folder" class="widget-title-icon"></i>
+                            攻略カテゴリー
+                        </h3>
                         <ul class="category-list">
                             <li><a href="#basic">基本戦略 <span class="count">(5)</span></a></li>
                             <li><a href="#advanced">上級テクニック <span class="count">(3)</span></a></li>
@@ -339,7 +379,10 @@
 
                     <!-- Strategy Calculator -->
                     <div class="widget calculator-widget">
-                        <h3 class="widget-title">🧮 効率計算機</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="calculator" class="widget-title-icon"></i>
+                            効率計算機
+                        </h3>
                         <div class="calculator">
                             <div class="calc-input">
                                 <label>プレイ時間/日:</label>
@@ -360,7 +403,10 @@
 
                     <!-- Ad Space -->
                     <div class="widget ad-widget">
-                        <h3 class="widget-title">📢 広告</h3>
+                        <h3 class="widget-title">
+                            <i data-lucide="megaphone" class="widget-title-icon"></i>
+                            広告
+                        </h3>
                         <!-- admax -->
                         <script src="https://adm.shinobi.jp/s/9f7c5790f90bc5c18ae58819a422f5af"></script>
                         <!-- admax -->
@@ -420,6 +466,14 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+    <script>
+        // Initialize Lucide icons
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
+        });
+    </script>
     <script>
         // Strategy Calculator
         document.addEventListener('DOMContentLoaded', function() {
